# GoGo

./: .gitignore  CMakeLists.txt  FORCLARK  LICENSE  README  index.html
cmake/: common.cmake  platform.h  test_for_InterlockedIncrement64.cpp  version.h
cmake/modules/: FindBoost.cmake  FindMySQL++.cmake  FindMySQL.cmake
cockpit/src/: Allocator.cpp  Allocator.h  CMakeLists.txt  Client.cpp  Client.h  ClientConnection.cpp  ClientConnection.h  MatchServer.cpp  Socket.cpp  client_handling.cpp
cockpit/src/packet/: Parameters.cpp  Registry.cpp  all_packets.cpp  crypto.cpp  crypto.h  lookup.cpp  security.cpp  security.h
cockpit/test/: CMakeLists.txt  array_check.h  test_crypto.cpp  test_param_extraction.cpp  test_parameters.cpp  test_registry.cpp
database/src/: CMakeLists.txt  MySQLGunzDB.cpp
database/src/MySQL/: ConnectionPool.cpp
database/src/MySQL/modules/: CreateCharacter.cpp  DeleteCharacter.cpp  GetAccountInfo.cpp  GetCID.cpp  GetCharacterInfo.cpp  GetCharacterList.cpp  GetEquipment.cpp  GetInventory.cpp  NameExists.cpp
database/src/mysql_modules/: CreateCharacter.cpp  GetAccountInfo.cpp  GetCID.cpp  GetCharacterList.cpp  GetEquipment.cpp  NameExists.cpp
gogo/: README
gogo/config/: channel.xml  my.sql  postgre.sql
gogo/db/: gunz.sql  gunzdb.sql
gogo/src/: CMakeLists.txt  Channel.cpp  Channel.h  ChannelList.cpp  ChannelList.h  ChannelLoader.cpp  ChannelLoader.h  Client.cpp  Client.h  Configuration.cpp  Configuration.h  ConsoleLogger.cpp  ConsoleLogger.h  GoGoClient.cpp  GoGoClient.h  GoGoFactory.cpp  GoGoFactory.h  MUIDSanta.cpp  MUIDSanta.h  PacketCrypt.cpp  PacketCrypt.h  PacketParameters.cpp  PacketParameters.h  Player.h  PlayerTraits.cpp  PlayerTraits.h  Server.cpp  Server.h  Structures.cpp  Structures.h  custom_new.cpp  error_codes.h  gogo.conf  handshake.cpp  main.cpp
gogo/src/modules/: OnChannelPlayerList.cpp  OnCharCreate.cpp  OnCharDelete.cpp  OnCharInfo.cpp  OnCharList.cpp  OnCharSelect.cpp  OnMatchLogin.cpp  OnRecommandedChannel.cpp  OnRecommendedChannel.cpp  error_handling.cpp  handshake.cpp  messaging.cpp
gogo/test/: CMakeLists.txt  test.h  test_boost.cpp  test_build_environment.cpp  test_channel_loader.cpp  test_configuration.cpp  test_packet_crypto.cpp  test_packet_parameter_construction.cpp
gunz/src/: CMakeLists.txt  Channel.cpp  ChannelList.cpp  ChannelTraits.cpp  MUIDSanta.cpp  MatchMaker.cpp  Player.cpp  PlayerList.cpp  PlayerTraits.cpp  Stage.cpp  dummy.cpp
gunz/test/: CMakeLists.txt  test_channel_list.cpp  test_muid_santa.cpp
include/: test.h  util.h
include/cockpit/: ClientHandler.h  ClientHandlerFactory.h  Logger.h  MatchServer.h  Socket.h  Transmitter.h
include/cockpit/packet/: Lookup.h  Packet.h  Parameters.h  Registry.h  crypto.h
include/cockpit/packet/protocol/: Admin_Announce.h  Admin_Hide.h  Admin_RequestBanPlayer.h  Admin_ResponseBanPlayer.h  Agent_Connect.h  Agent_Disconnect.h  Agent_RelayPeer.h  Agent_StageReady.h  Agent_StageRelease.h  Agent_StageReserve.h  Channel_Chat.h  Channel_Join.h  Channel_Leave.h  Channel_List.h  Channel_ListStart.h  Channel_ListStop.h  Channel_RequestAllPlayerList.h  Channel_RequestJoinFromName.h  Channel_RequestPlayerList.h  Channel_Request_Chat.h  Channel_Request_Rule.h  Channel_ResponseAllPlayerList.h  Channel_ResponseJoin.h  Channel_ResponsePlayerList.h  Channel_Response_Rule.h  ChatRoom_Chat.h  ChatRoom_Create.h  ChatRoom_Invite.h  ChatRoom_Join.h  ChatRoom_Leave.h  ChatRoom_SelectWrite.h  Clock_Synchronize.h  Event_ChangeMaster.h  Event_ChangePassword.h  Event_RemoveJJang.h  Event_RequestJJang.h  Event_UpdateJJang.h  Game_Dead.h  Game_Kill.h  Game_LevelDown.h  (+247 more)
include/database/: AccountInfo.h  CharacterEntry.h  CharacterInfo.h  GunzDB.h  Item.h  MySQLGunzDB.h  oopsies.h
include/database/MySQL/: ConnectionPool.h
include/gtest/internal/: gtest-port.h
include/gunz/: Channel.h  ChannelList.h  ChannelTraits.h  MUIDSanta.h  Player.h  PlayerTraits.h  Stage.h  Structures.h  simple_types.h
include/gunz/detail/: Collection.h  PlayerList.h
include/net/: PacketCrypto.h  PacketParameters.h  PacketRegistry.h  packet.h
include/net/protocol/: Admin_Announce.h  Admin_Halt.h  Admin_Hide.h  Admin_PingToAll.h  Admin_ReloadClientHash.h  Admin_RequestBanPlayer.h  Admin_RequestServerInfo.h  Admin_RequestSwitchLadderGame.h  Admin_RequestUpdateAccountUGrade.h  Admin_ResponseBanPlayer.h  Admin_ResponseServerInfo.h  Admin_ResponseUpdateAccountUGrade.h  Admin_Terminal.h  Agent_AllowTunnelingTCP.h  Agent_AllowTunnelingUDP.h  Agent_Connect.h  Agent_DebugPing.h  Agent_DebugTest.h  Agent_Disconnect.h  Agent_Error.h  Agent_LocalLogin.h  Agent_LocateToClient.h  Agent_PeerBindTCP.h  Agent_PeerBindUDP.h  Agent_PeerReady.h  Agent_PeerUnbind.h  Agent_RelayPeer.h  Agent_ResponseLogin.h  Agent_StageReady.h  Agent_StageRelease.h  Agent_StageReserve.h  Agent_TunnelingTCP.h  Agent_TunnelingUDP.h  Announce_.h  Announce_Schedule.h  Channel_Chat.h  Channel_Join.h  Channel_Leave.h  Channel_List.h  Channel_ListStart.h  (+408 more)
include/reflex/: Buffer.h  Scheduler.h  TaskProcessor.h
include/reflex/detail/: Buffer.h  TaskProcessor.h
include/tinyxml/: tinystr.h  tinyxml.h
include/util/: ConsoleLogger.h  Logger.h  SmallVector.h  WorkQueue.h  buffer.h  memory.h
net/src/: CMakeLists.txt  PacketCrypto.cpp  PacketParameters.cpp  PacketRegistry.cpp  all_packets.cpp  security.cpp
net/test/: CMakeLists.txt  test_packet_crypto.cpp  test_packet_parameter_construction.cpp  test_security.cpp
protocol/: README  brazil.protocol  ijji.protocol  parse.py
protocol/net/src/: PacketRegistry.cpp
reflex/src/: CMakeLists.txt  Scheduler.cpp  TaskProcessor.cpp  dummy.cpp
reflex/test/: CMakeLists.txt  test_buffer.cpp  test_scheduler.cpp  test_task_processor.cpp
tinyxml/src/: CMakeLists.txt  tinystr.cpp  tinyxml.cpp  tinyxmlerror.cpp  tinyxmlparser.cpp
tinyxml/test/: CMakeLists.txt  xmltest.cpp
util/src/: CMakeLists.txt  ConsoleLogger.cpp  buffer.cpp  memory.h
util/test/: CMakeLists.txt  test_memory.cpp  test_workqueue.cpp
